[gd_scene load_steps=8 format=3 uid="uid://b0okmlm7bvfqy"]

[ext_resource type="Script" path="res://scripts/Minigames/ButtonSmashMinigame.gd" id="1_wdhk2"]
[ext_resource type="Texture2D" uid="uid://bacgpf7luxd1w" path="res://assets/mouse.png" id="2_8etgl"]
[ext_resource type="Texture2D" uid="uid://dw686w5fow5eq" path="res://assets/Scare.png" id="3_o2e2e"]
[ext_resource type="AudioStream" uid="uid://b1oer0jkc6hy6" path="res://assets/glitch-scream-305035.mp3" id="3_ol50i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yd082"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_hpson"]
atlas = ExtResource("3_o2e2e")
region = Rect2(128, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_nb3so"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hpson")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="ButtonSmashMinigame" type="Node2D"]
script = ExtResource("1_wdhk2")

[node name="Timer" type="Timer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_yd082")
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(576, 311)
scale = Vector2(5, 5)
texture = ExtResource("2_8etgl")

[node name="TargetLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -41.5
offset_top = 99.0
offset_right = 41.5
offset_bottom = 122.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "PRESS WHEN IT'S GREEN"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="TimerLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -186.5
offset_top = 44.0
offset_right = 186.5
offset_bottom = 89.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "PRESS WHEN IT'S GREEN"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="ClicksLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -186.5
offset_top = 520.0
offset_right = 186.5
offset_bottom = 565.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "PRESS WHEN IT'S GREEN"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="ScareSprite" type="AnimatedSprite2D" parent="CanvasLayer"]
z_index = 1
position = Vector2(568, 331)
scale = Vector2(10, 10)
sprite_frames = SubResource("SpriteFrames_nb3so")

[node name="FlashScreen" type="ColorRect" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 0, 1)

[node name="Scare" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_ol50i")
volume_db = 12.0

[node name="FlashTimer" type="Timer" parent="."]
